@@ -52,7 +52,7 @@ libdfsch_regex_la_LIBADD =  libdfsch.la
 dfsch_repl_SOURCES = src/repl.c
 dfsch_repl_LDADD = libdfsch.la \
 	libdfsch_load.la libdfsch_threads.la libdfsch_regex.la \
-	-lreadline -lncurses		
+	@READLINE_LIBS@		
 
 
 TESTS = tests/scm-test.sh
